# aggre-gate

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
aggregator-core/: AUDIT_REPORT.md  Cargo.toml  README.md
aggregator-core/src/: aggregator.rs  config.rs  error.rs  lib.rs  types.rs
aggregator-core/tests/: error_tests.rs
aggregator-core/tests/aggregator-core/: aggregator_tests.rs  config_tests.rs  types_tests.rs
analysis-tools/: Cargo.toml  README.md
analysis-tools/src/: arbitrage.rs  lib.rs
analysis-tools/tests/: arbitrage_detector_tests.rs  infrastructure_test.rs  performance_integration_tests.rs
analysis-tools/tests/common/: assertions.rs  mod.rs  test_data.rs
docs/aggregator-core-doc/: README.md  api-examples.md  tests.md
docs/aggregator-core-doc/diagrams/: architecture.mmd  components.mmd  config-structure.mmd  data-flow.mmd  error-handling.mmd  exchange-workflow.mmd
docs/aggregator-core-doc/modules/: aggregator.md  config.md  error.md  lib.md  types.md
exchange-connectors/: Cargo.toml
exchange-connectors/src/: binance.rs  bitstamp.rs  bybit.rs  coinbase.rs  kraken.rs  lib.rs
exchange-connectors/tests/: performance_tests.rs  placeholder_tests.rs  test_runner.rs  trait_tests.rs  unit_tests.rs
exchange-connectors/tests/common/: mod.rs
orderbook-implementations/: Cargo.toml  README.md
orderbook-implementations/benches/: orderbook_benchmarks.rs
orderbook-implementations/src/: avl_tree.rs  btree_set.rs  hashmap.rs  lib.rs  rb_tree.rs
orderbook-implementations/tests/: btree_tests.rs  edge_cases.rs  integration_tests.rs
server-implementations/: Cargo.toml  build.rs
server-implementations/proto/: orderbook_service.proto
server-implementations/src/: grpc.rs  lib.rs  rest.rs  websocket.rs
