[workspace]
resolver = "3"
members = [
    "aggregator-core",
    "exchange-connectors",
    "orderbook-implementations", 
    "server-implementations",
    "analysis-tools",
    "cli-tools",
    "benchmarks"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["0xOse 0xoepatrick@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/patrick-ehimen/aggregate"
description = "A comprehensive cryptocurrency orderbook aggregation platform"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.20"
tungstenite = "0.27.0"
# uuid = { version = "1", features = ["serde"] }